--- a/views/room.ejs
+++ b/views/room.ejs
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -42,9 +42,11 @@
     </div>
     <div class="mainclone">
         <div class="main_left">
+            <!-- // Screen Share -->
             <div id="share_screen_section" style="display: none;">
                 <video id="share_screen" autoplay playsinline muted></video>
             </div>
+            <!-- // Users -->
             <div class="main_videos">
                 <div id="video-grids">
                 </div>
@@ -115,17 +117,4 @@
     <script src="/public/main.js"></script>
 </body>
 
-</html> -->
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    hi
-</body>
 </html>
